fix: Install missing @vue/apollo-composable package
- Added @vue/apollo-composable to client dependencies
- Fixes login functionality
- Resolves 'Failed to resolve import' error
- Frontend now loads correctly with GraphQL integration

--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.8.8",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
+    "@vue/apollo-composable": "^4.2.2",
     "chart.js": "^4.4.1",
     "graphql": "^16.8.1",
     "pinia": "^2.1.7",
@@ -38,4 +39,3 @@
     "vue-tsc": "^1.8.25"
   }
 }
-
