--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,19 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.8",
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/poppins": "^5.2.7",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.1.1",
     "@vue/apollo-composable": "^4.2.2",
+    "@vueuse/core": "^14.0.0",
+    "@vueuse/motion": "^3.0.3",
+    "axios": "^1.12.2",
     "chart.js": "^4.4.1",
-    "graphql": "^16.8.1",
+    "graphql": "^16.11.0",
+    "lucide-vue-next": "^0.546.0",
+    "nprogress": "^0.2.0",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-chartjs": "^5.3.0",
