--- a/server/package.json
+++ b/server/package.json
@@ -9,45 +9,57 @@
     "start": "node dist/app.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:deploy": "prisma migrate deploy",
+    "prisma:migrate:reset": "prisma migrate reset",
     "prisma:studio": "prisma studio",
+    "prisma:push": "prisma db push",
+    "seed": "ts-node scripts/seed.ts",
+    "db:setup": "npm run prisma:generate && npm run prisma:push && npm run seed",
     "test": "jest"
   },
-  "keywords": ["shopify", "oms", "order-management", "fulfillment"],
+  "keywords": [
+    "shopify",
+    "oms",
+    "order-management",
+    "fulfillment"
+  ],
   "author": "ShopifyGenie",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.7.0",
     "@shopify/shopify-api": "^9.0.0",
     "apollo-server-express": "^3.13.0",
+    "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "date-fns": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
     "graphql": "^16.8.1",
+    "helmet": "^7.1.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.9.7",
-    "axios": "^1.6.2",
-    "@prisma/client": "^5.7.0",
-    "winston": "^3.11.0",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4"
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/cors": "^2.8.17",
     "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.11",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.4",
     "@types/nodemailer": "^6.4.14",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prisma": "^5.7.0",
-    "@types/jest": "^29.5.11",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
-
